# caqe

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  changelog.md
.github/workflows/: rust.yml
benches/: endtoend.rs  instances.rs
docs/qbfeval-2018/: main.bib  main.tex
docs/qbfeval-2019/: main.bib  main.tex
docs/qbfeval-2020/: main.bib  main.tex
src/: caqe.rs  clause.rs  dimacs.rs  experiment.rs  lib.rs  literal.rs  main.rs  matrix.rs  preprocessor.rs  qdimacs.rs  solver.rs
src/matrix/: dependency.rs  depenendcy.rs  hierarchical.rs  mod.rs  schemes.rs
src/parse/: dimacs.rs  dqdimacs.rs  mod.rs  qcir.rs  qdimacs.rs
src/parsing/: dimacs.rs  dqdimacs.rs  mod.rs  qcir.rs  qdimacs.rs
src/solve/: caqe.rs  dcaqe.rs  mod.rs
src/utils/: mod.rs  statistics.rs
