[package]
name = "caqe"
version = "4.0.0"
authors = ["Leander Tentrup <tentrup@react.uni-saarland.de>"]
edition = "2018"

[dependencies]
cryptominisat = { git = "https://github.com/ltentrup/cryptominisat-rs.git", rev = "d812d3032eaa0c31f5f25534df9a1d72c5d354cc" }
log = { version = "0.4.6", features = ["release_max_level_warn"] }
simplelog = "0.5.3"
bit-vec = "0.5.0"
tempfile = "3.0.6"    # for first running preprocessor and piping result to temporary
clap = "2.32.0"       # parsing command line arguments
rustc-hash = "1.0.1"  # fast, non-randomized HashMap/HashSet
uncover = "0.1.1"     # test maintainence
ena = "0.11"          # union-find implementation
dot = "0.1.4"         # graphviz dot representation of structures
jemallocator = { version = "0.1.9", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.11.0"          # progress bars
atomicwrites = "0.2.2"  # atomic file writes
colored-diff = "0.2.1"      # visualize differences in configurations


[patch.crates-io]
#cryptominisat = { git = "https://github.com/ltentrup/cryptominisat-rs.git" }

[features]
default = ["jemalloc"]
statistics = [] # enable statistics
jemalloc = ["jemallocator"] # use jemalloc allocator instead of system one

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false

[[bin]]
name = "caqe"
path = "src/bin/caqe.rs"

[[bin]]
name = "dcaqe"
path = "src/bin/dcaqe.rs"

[[bin]]
name = "experiment"
path = "src/bin/experiment.rs"
required-features = ["statistics"]
