[package]
name = "caqe"
version = "4.0.1"
authors = ["Leander Tentrup <tentrup@react.uni-saarland.de>"]
edition = "2018"

[dependencies]
cryptominisat = { git = "https://github.com/ltentrup/cryptominisat-rs.git", rev = "d812d3032eaa0c31f5f25534df9a1d72c5d354cc" }
log = { version = "0.4.8", features = ["release_max_level_warn"] }
simplelog = "0.7.4"
bit-vec = "0.6.1"
tempfile = "3.1.0"    # for first running preprocessor and piping result to temporary
clap = "2.33.0"       # parsing command line arguments
rustc-hash = "1.0.1"  # fast, non-randomized HashMap/HashSet
uncover = "0.1.1"     # test maintainence
ena = "0.13.1"          # union-find implementation
dot = "0.1.4"         # graphviz dot representation of structures
jemallocator = { version = "0.3.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.13.0"          # progress bars
atomicwrites = "0.2.5"  # atomic file writes
colored-diff = "0.2.2"      # visualize differences in configurations


[patch.crates-io]
#cryptominisat = { git = "https://github.com/ltentrup/cryptominisat-rs.git" }

[features]
default = ["jemalloc"]
statistics = [] # enable statistics
jemalloc = ["jemallocator"] # use jemalloc allocator instead of system one

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false

[[bin]]
name = "caqe"
path = "src/bin/caqe.rs"

[[bin]]
name = "dcaqe"
path = "src/bin/dcaqe.rs"

[[bin]]
name = "experiment"
path = "src/bin/experiment.rs"
required-features = ["statistics"]
