[package]
name = "caqe"
version = "4.0.1"
authors = ["Leander Tentrup <tentrup@react.uni-saarland.de>"]
edition = "2018"

[dependencies]
cryptominisat = { git = "https://github.com/ltentrup/cryptominisat-rs.git", rev = "6f979cb6954f85b9079b8453edf03ee3518d9f9b" }
log = { version = "0.4.11", features = ["release_max_level_warn"] }
env_logger = "0.7.1"
bit-vec = "0.6.2"
tempfile = "3.1.0"    # for first running preprocessor and piping result to temporary
clap = "2.33.1"       # parsing command line arguments
rustc-hash = "1.1.0"  # fast, non-randomized HashMap/HashSet
uncover = "0.1.1"     # test maintainence
ena = "0.14.0"          # union-find implementation
dot = "0.1.4"         # graphviz dot representation of structures
jemallocator = { version = "0.3.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.15.0"          # progress bars
atomicwrites = "0.2.5"  # atomic file writes
colored-diff = "0.2.2"      # visualize differences in configurations
rayon = "1.5.0"


[patch.crates-io]
#cryptominisat = { git = "https://github.com/ltentrup/cryptominisat-rs.git" }

[features]
default = ["jemalloc"]
statistics = [] # enable statistics
jemalloc = ["jemallocator"] # use jemalloc allocator instead of system one
dcaqe = [] # build dcaqe
largemem = ["cryptominisat/largemem"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false

[[bin]]
name = "caqe"
path = "src/bin/caqe.rs"

[[bin]]
name = "dcaqe"
path = "src/bin/dcaqe.rs"
required-features = ["dcaqe"]

[[bin]]
name = "experiment"
path = "src/bin/experiment.rs"
required-features = ["statistics"]
